# hermetic

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/skills/add-plugin/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
docs/plans/: 2026-04-17-001-feat-hermes-plugin-sync-extraction-plan.md
src/hermes_plugin_sync/: __init__.py  cli.py  core.py  frontmatter.py  git.py  manifest.py  tools.py
src/hermetic/: __init__.py  cli.py  git.py
tests/: conftest.py  test_cli.py  test_core.py  test_frontmatter.py  test_manifest.py  test_parity.py  test_tools.py
tests/fixtures/: legacy_plugin_sync_v0.py
tests/fixtures/sample_plugin/agents/code/: refactorer.md
tests/fixtures/sample_plugin/agents/research/: literature-scout.md
tests/fixtures/sample_plugin/skills/hello-skill/: SKILL.md
tests/fixtures/sample_plugin/skills/hello-skill/references/: greetings.md
tests/fixtures/sample_plugin/skills/standalone-skill/: SKILL.md
tests/integration/: conftest.py  test_clone_or_update.py  test_sync_live.py  test_sync_local.py
