[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermetic-cli"
dynamic = ["version"]
description = "Hermetic — sync Claude Code plugins into Hermes as native skills and delegation skills."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Tyler Barstow", email = "tyler.barstow@gmail.com" }]
keywords = ["hermetic", "hermes", "claude-code", "plugin", "skill", "agent", "migration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "pyyaml>=6",
]

[project.urls]
Homepage = "https://github.com/roach88/hermetic"
Repository = "https://github.com/roach88/hermetic"
Issues = "https://github.com/roach88/hermetic/issues"
Changelog = "https://github.com/roach88/hermetic/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-mock>=3.12",
]
dev = [
    "ruff>=0.6",
    "ty>=0.0.30",
]

[project.scripts]
hermetic = "hermetic.cli:main"

[tool.hatch.version]
path = "src/hermetic/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/hermetic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers -m 'not live'"
markers = [
    "live: requires network, default-skipped",
    "integration: local integration test, default-run",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["tests/fixtures/legacy_plugin_sync_v0.py"]

[tool.ruff.lint]
# Opinionated-but-boring: flag common mistakes, enforce imports, modernize
# legacy syntax. Avoids style-for-style's-sake rules (D docstrings, N naming)
# so lint failures are almost always real bugs or stale idioms.
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
# Tests are allowed loose asserts and long lines in fixtures.
"tests/**" = ["E501"]

[tool.ty.environment]
# src/ layout: tell ty where the package root lives.
root = ["./src"]
python-version = "3.10"

[tool.ty.terminal]
# Fail on warnings too — matches the "strict" bar we had with mypy.
error-on-warning = true

[tool.coverage.run]
source = ["hermetic"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
